--- a/VimHelper.csproj
+++ b/VimHelper.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="SQL/CodeFile0000.SQL" />
+    <EmbeddedResource Include="SQL/CodeDb0000.SQL" />
   </ItemGroup>
 
   <Target Name="BuildTimeStampTarget" BeforeTargets="Compile">
